# aviate

./: .gitignore  manage.py  pyproject.toml  readme.md
ats_system/: settings.py  urls.py  wsgi.py
candidates/: admin.py  models.py  serializers.py  urls.py  views.py
candidates/migrations/: 0001_initial.py
